forgejo/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: forgejo-gateway
  namespace: forgejo
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: forgejo-certificate
    - name: ssh
      port: 22
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Same
