forgejo/www-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-http-route
  namespace: forgejo
spec:
  parentRefs:
    - name: forgejo-gateway
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - git.raft.lutris.house
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
